--- a/ife_4.html
+++ b/ife_4.html
@@ -18,10 +18,8 @@
 			background: #fc0;
 			width: 100px;
 			height: 100px;
-			/*border-radius: 50%;*/
+			border-radius: 50%;
 			position: absolute;
-			left: 0;
-			bottom: 0;
 		}
 		.yellow-part-left{
 			left: -50px;
@@ -36,8 +34,8 @@
 </head>
 <body>
 	<div class="grey-container">
-		<div class="yellow-part"></div>
-		<!-- <div class="yellow-part"></div> -->
+		<div class="yellow-part yellow-part-left"></div>
+		<div class="yellow-part yellow-part-right"></div>
 	</div>
 </body>
 </html>
