--- a/ife_15.html
+++ b/ife_15.html
@@ -100,7 +100,8 @@ function init() {
 
   // 在这下面给sort-btn绑定一个点击事件，点击时触发btnHandle函数
   var btn = document.getElementById('sort-btn');
-  btn.addEventListener("click",btnHandle);
+  // btn.addEventListener("click",btnHandle);
+  btn.onclick = btnHandle;
 }
 
 init();
