--- a/ife_17.html
+++ b/ife_17.html
@@ -11,8 +11,19 @@
       .day{
         display: inline-block;
         width: 5px;
-        background: red;
         border: 1px solid white;
+      }
+      .week{
+        display: inline-block;
+        width: 15px;
+        border: 1px solid white;
+        margin: 0 15px;
+      }
+      .month{
+        display: inline-block;
+        width: 100px;
+        border: 1px solid white;
+        margin: 0 40px;
       }
       .placeholder{
         display: inline-block;
@@ -21,8 +32,11 @@
       }
       .aqi-chart-wrap{
         position: relative;
-        width: 60%;
-        height: 800px;
+        width: 750px;
+        margin:0 auto;
+        border-left: 1px solid grey;
+        border-bottom:1px solid grey;
+        padding-left: 50px;
       }
     </style>
   </head>
