--- a/ife_16.html
+++ b/ife_16.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>IFE JavaScript Task 01</title>
+    <title>将输入框中的值填入表格</title>
     
   </head>
 <body>
