--- a/ife_17.html
+++ b/ife_17.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>IFE JavaScript Task 01</title>
+    <title>图表显示空气质量</title>
     <script src="js/task17.js" defer async></script>
     <style>
       input:focus{
