--- a/ife_15.html
+++ b/ife_15.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>IFE JavaScript Task 01</title>
+    <title>空气质量排序</title>
   </head>
 <body>
 
