--- a/project/webpackConfig/index.html
+++ b/project/webpackConfig/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>webpack dev server</title>
-    <link rel="stylesheet" href="./dist/app.css">
+    <link rel="stylesheet" href="/app.css">
 </head>
 <body>
     <div id="root"></div>
-    <script src="./dist/app.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
